<resources>
    <string name="app_name">LNMIIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="weblink">lnmiit.ac.in</string>
    <string name="academics">Academics</string>
    <string name="admissions">Admissions</string>
    <string name="placements">Placements</string>
    <string name="administration">Administration</string>
    <string name="faculty">Faculty</string>
    <string name="student">Students</string>
    <string name="emergency">Emergency</string>
    <string name="bus">Bus</string>
    <string name="map">Map</string>
    <string name="dining">Dining</string>
    <string name="gallery">Gallery</string>
    <string name="about">About Us</string>
    <string-array name="cse_faculty_url">
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=20231&amp;amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=70&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=212&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/images/system/noprofile.jpg</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=151&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=133&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=56&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=54&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=140&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=73&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=145&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=50&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=75&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=78&amp;command=profile_pic&amp;w=100&amp;h=100</item>
    </string-array>
    <string-array name="cse_faculty_name">
        <item>Prof. Narasimha Bolloju</item>
        <item>Prof. Ravi Prakash Gorthi</item>
        <item>Dr. Sakthi Balan Muthiah</item>
        <item>Dr. Subrat Kumar Dash</item>
        <item>Dr. Bharavi Mishra</item>
        <item>Dr. Poonam Gera</item>
        <item>Dr. Preety Singh</item>
        <item>Dr. Rajbir Kaur</item>
        <item>Dr. Vibhor Kant</item>
        <item>Mr. Dinesh Khandelwal</item>
        <item>Mr. Sunil Kumar</item>
        <item>Mr. Vikas Bajpai</item>
        <item>Ms. Sonam Nahar</item>
        <item>Mr. Mukesh K Jadon</item>

    </string-array>
    <string-array name="cse_faculty_designation">
        <item>Professor</item>
        <item>Professor</item>
        <item>Associate Professor</item>
        <item>Associate Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Lecturer</item>
    </string-array>
    <string-array name="cse_faculty_email">
        <item>narsi.bolloju@lnmiit.ac.in</item>
        <item>rgorthi@lnmiit.ac.in</item>
        <item>sakthi.balan@lnmiit.ac.in</item>
        <item>subrat@lnmiit.ac.in</item>
        <item>bharavi@lnmiit.ac.in</item>
        <item>poonamgera.21@gmail.com</item>
        <item>prtysingh@gmail.com</item>
        <item>catchrajbirkaur@gmail.com</item>
        <item>vibhor.kant@lnmiit.ac.in</item>
        <item>dineshk@lnmiit.ac.in</item>
        <item>sunil@lnmiit.ac.in</item>
        <item>vikas.bajpai87@gmail.com</item>
        <item>sonamnahar@gmail.com</item>
        <item>jadonmukesh30@gmail.com</item>
    </string-array>
    <string-array name="cse_faculty_contact">
        <item> </item>
        <item>+917597167508</item>
        <item>+919739979480</item>
        <item>+919413825982</item>
        <item>+917727017662</item>
        <item>+918764395180</item>
        <item>+919828364396</item>
        <item>+919829688889</item>
        <item> </item>
        <item>+918764038699</item>
        <item> </item>
        <item>+918875522828</item>
        <item>+919530176476</item>
        <item> </item>
    </string-array>
    <string-array name="ece_faculty_url">
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=77&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=46&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=82&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=119&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=195&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=149&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=144&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=20269&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=166&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=189&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=150&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=47&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=98&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=20280&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=93&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=53&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=20267&amp;command=profile_pic&amp;w=100&amp;h=100</item>
    </string-array>
     <string name="intro_ug">The primary objectives of establishing the LNM INSTITUTE OF INFORMATION TECHNOLOGY JAIPUR
        (LNM IIT Jaipur) are:-\n
•To create a platform, comparable to the best in the world,\n
•To become an effective catalyst for technological and societal development of the country,\n
•To provide the highest level of education in information technology,\n
•To produce competent, creative and imaginative engineers, in areas related to information technology,\n
•To promote the spirit of free and objective enquiry.\n

The Institute is currently running the following Four Year B.Tech Programmes:-</string>
    <string name="ug_cse">"The CSE discipline is supported by a team of faculty members having excellent research credentials as well as extensive industry experience. The lab facilities include Programming Lab, Digital Communication Lab, DBMS Lab, and Computer Networks Lab.The branch focusses on emerging trends like Software Engineering, Distributed and Cloud Computing, Data Mining, Data Warehousing and Multi-core Architecture."</string>
    <string name="ug_ece">The ECE team is a fine blend of renowned as well as young and dynamic faculty members,having education and experience from renowned institutions in India and abroad. Advanced courses and electives in later years enable students to specialise in communications, signal processing, robotics, VLSI, embedded systems, and other streams. The ECE department also offers specialized M.Tech. and Dual Degree programs inCommunication Systems, Microelectronics, Microwave engineering and VLSI.</string>
    <string name="ug_cce">The discipline is ably supported by an excellent team of faculty members, many of them having extensive industry-based experience in the fusion of software and hardware technologies. The CCE lab facilities include the Electronics Lab, Analog Communication Lab, Programming Lab, Digital Communication Lab, DBMS Lab, and Computer Networks Lab, ECAD Lab, and Microwave and Optical Communication Lab.</string>
    <string name="ug_mme">The MME discipline is supported by a team of faculty members having excellent research
        credentials as well as extensive industry experience.The branch helps students to deal with the real life
        challenges in the field of Mechanical and Mechatronics industries and equip them with the fundamental concepts
        and techniques of mechatronics applications, relevant to emerging technological advancements.It also focusses
        on Computer Aided Manufacturing, Design Engineering, Automation, Robotics.</string>
    <string name="intro_pg">The goals of the postgraduate programs at the LNM Institute of Information Technology (LNMIIT)
        Jaipur are: The development of scientific and engineering manpower of the highest quality, to cater to the needs of
        industry, R &amp; D organizations and educational institutions, a broad grasp of the fundamental principles of the
        sciences and scientific methods, a deep understanding of the area of specialization, an innovative ability to solve
        new problems, and a capacity to learn continually and interact with multidisciplinary groups. Above all, the students
        should have a capacity for free and objective inquiry, courage and integrity, awareness and sensitivity to the needs
        and aspirations of society. </string>
    <string name="mtech">•M. Tech Program students, irrespective of their discipline, must do a minimum of 28 credits through course work and a minimum of 36 credits through research (thesis) work.\n
•M. S. (by Research) Program students, irrespective of their discipline, must do a minimum of 16 credits through course work and a minimum of 48 credits through research (thesis) work.
        </string>
    <string name="abt_phd">
•With M. Tech degree, irrespective of their discipline, must do a minimum of 16 credits through course work and a minimum of 64 credits through research (thesis) work.\n
•With Msc, MA and M Phil degree, irrespective of their discipline, must do a minimum of 24 credits through course work and a minimum of 64 credits through research (thesis) work.\n
•With B. Tech degree, irrespective of their discipline, must do a minimum of 32 credits through course work and a minimum of 64 credits through research (thesis) work.
        </string>
    <string name="ug_me">The MME discipline is supported by a team of faculty members having excellent research
        credentials as well as extensive industry experience.The branch helps students to deal with the real life
        challenges in the field of Mechanical and Mechatronics industries and equip them with the fundamental concepts
        and techniques of mechatronics applications, relevant to emerging technological advancements.It also focusses
        on Computer Aided Manufacturing, Design Engineering, Automation, Robotics.</string>
</resources>