<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/layout_bg"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/global_margin"
            android:padding="@dimen/global_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cardplus"
                android:layout_marginBottom="@dimen/global_margin"
                >


                <TextView
                    android:id="@+id/intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Introduction"
                    android:textSize="@dimen/head_text"
                    android:textColor="#FF0000"
                    android:textAlignment="center"
                    android:padding="@dimen/global_padding"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    />
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:paddingLeft="@dimen/padding_left"
                    android:text="@string/intro_pg"
                    android:paddingBottom="@dimen/padding_bottom"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cardplus"
                android:layout_marginBottom="@dimen/global_margin"
                >


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="M.Tech"
                    android:background="@drawable/button_background"
                    android:textSize="@dimen/head_text"/>

                <TextView
                    android:id="@+id/about_mtech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginTop="@dimen/margin_top"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:text="@string/mtech"
                    android:textSize="@dimen/norml_text"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cardplus"
                android:layout_marginBottom="@dimen/global_margin"
                >

              <Button
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="Ph.D Programs"
                  android:background="@drawable/button_background"
                  android:textSize="@dimen/head_text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginTop="@dimen/margin_top"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:textSize="@dimen/norml_text"
                    android:text="@string/abt_phd"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
